Fixed outdated links
Minor scrollbar styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,15 +26,48 @@
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
-}}
+}
+ html {
+   scroll-behavior: smooth;
+ }
+
+::-webkit-scrollbar {
+  @apply w-1.5;
+}
+::-webkit-scrollbar-track {
+display: none;
+}
+::-webkit-scrollbar-thumb {
+  background-color: grey;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--text-color);
+}
+}
 
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
-
 .no-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+@screen md {
+  .md\:scrollbar {
+      -ms-overflow-style: auto;
+      scrollbar-width: auto;
+  }
+  .md\:scrollbar::-webkit-scrollbar {
+    display: block;
+  }
+}
+.scrollbar::-webkit-scrollbar {
+  display: block;
+}
+.scrollbar {
+  -ms-overflow-style: auto;
+  scrollbar-width: auto;
 }
 
 .tech{
